	--- 9.12.0b2 released ---

4806.	[func]		Log messages related to loading of zones are now
			directed to the "zoneload" logging category.
			[RT #41640]

4805.	[bug]		TCP4Active and TCP6Active weren't being updated
			correctly. [RT #46454]

4804.	[port]		win32: access() does not work on directories as
			required by POSIX.  Supply a alternative in
			isc_file_isdirwritable. [RT #46394]

4803.	[placeholder]

4802.	[test]		Refactor mkeys system test to make it quicker and more
			reliable. [RT #45293]

4801.	[func]		'dnssec-lookaside auto;' and 'dnssec-lookaside .
			trust-anchor dlv.isc.org;' now elicit warnings rather
			than being fatal configuration errors. [RT #46410]

4800.	[bug]		When processing delzone, write one zone config per
			line to the NZF. [RT #46323]

4799.	[cleanup]	Improve clarity of keytable unit tests. [RT #46407]

4798.	[func]		Keys specified in "managed-keys" statements
			are tagged as "initializing" until they have been
			updated by a key refresh query. If initialization
			fails it will be visible from "rndc secroots".
			[RT #46267]

4797.	[func]		Removed "isc-hmac-fixup", as the versions of BIND that
			had the bug it worked around are long past end of
			life. [RT #46411]

4796.	[bug]		Increase the maximum configurable TCP keepalive
			timeout to 65535. [RT #44710]

4795.	[func]		A new statistics counter has been added to track
			priming queries. [RT #46313]

4794.	[func]		"dnssec-checkds -s" specifies a file from which
			to read a DS set rather than querying the parent.
			[RT #44667]

4793.	[bug]		nsupdate -[46] could overflow the array of server
			addresses. [RT #46402]

4792.	[bug]		Fix map file header correctness check. [RT #38418]

4791.	[doc]		Fixed outdated documentation about export libraries.
			[RT #46341]

4790.	[bug]		nsupdate could trigger a require when sending a
			update to the second address of the server.
			[RT #45731]

4789.	[cleanup]	Check writability of new-zones-directory. [RT #46308]
